--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -4,6 +4,8 @@ on:
     branches:
       - main
 
+permissions: {}
+
 jobs:
   publish:
     name: Build and publish Docker images
@@ -15,7 +17,9 @@ jobs:
     
     steps:
       - name: Check out code
-        uses: actions/checkout@v6
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
+        with:
+          persist-credentials: false
       - name: Publish Docker
         run: script/cibuild-publish-ghcr
         env:
