--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -8,6 +8,8 @@ on:
     - cron: '30 1 * * 6' # https://crontab.guru/#30_1_*_*_6
   workflow_dispatch:
 
+permissions: {}
+
 jobs:
   analysis:
     name: Scorecard analysis
@@ -24,7 +26,7 @@ jobs:
       security-events: write
 
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
         with:
           persist-credentials: false
 
